Allow modal to be wider and fix button wrapping

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -2208,7 +2208,6 @@ ul.wc_coupon_list_block {
 	.wc-order-preview-table {
 		width: 100%;
 		margin: 0;
-		border-bottom: 1px solid #ccc;
 		th, td {
 			padding: 1em 1.5em;
 			text-align: left;
@@ -2264,10 +2263,21 @@ ul.wc_coupon_list_block {
 			}
 		}
 	}
-	.wc-action-button,
-	.wc-action-button-group {
-		float: left;
-		margin-right: 4px;
+	footer {
+		.wc-action-button-group {
+			display: inline-block;
+			float: left;
+		}
+		.button.button-large {
+			margin-left: 10px;
+			padding: 0 10px !important;
+			line-height: 28px;
+			height: auto;
+			display: inline-block;
+		}
+	}
+	.wc-action-button-group label {
+		display: none;
 	}
 }
 
@@ -2275,28 +2285,34 @@ ul.wc_coupon_list_block {
 	vertical-align: middle;
 	line-height: 26px;
 	text-align: left;
-	margin-bottom: 4px;
 	label {
 		margin-right: 6px;
 		cursor: default;
 		font-weight: bold;
+		line-height: 28px;
 	}
 	.wc-action-button-group__items {
-		white-space: nowrap;
+		display: inline-flex;
+		flex-flow: row wrap;
+		align-content: flex-start;
+		justify-content: flex-start;
 	}
 	.wc-action-button {
 		margin: 0 0 0 -1px !important;
 		border: 1px solid #ccc;
-		padding: 1px 10px !important;
+		padding: 0 10px !important;
 		border-radius: 0 !important;
 		float: none;
 		line-height: 28px;
 		height: auto;
 		z-index: 1;
 		position:relative;
-		max-width: 175px;
 		overflow: hidden;
 		text-overflow: ellipsis;
+		flex: 1 0 auto;
+		box-sizing: border-box;
+		text-align: center;
+		white-space: nowrap;
 	}
 	.wc-action-button:hover,
 	.wc-action-button:focus {
@@ -2313,31 +2329,23 @@ ul.wc_coupon_list_block {
 		border-bottom-right-radius: 3px !important;
 	}
 }
-
 @media screen and (max-width: 782px) {
-	.wc-order-preview .wc-action-button-group {
-		float: none;
-		margin: 0 0 10px;
-
-		label {
-			display: none;
-		}
-		.wc-action-button-group__items {
+	.wc-order-preview footer {
+		.wc-action-button-group .wc-action-button-group__items {
 			display: flex;
-			flex-direction: row;
-			flex-wrap: wrap;
 		}
-		.wc-action-button {
-			flex: 1 0 50%;
-			max-width: 100%;
+		.wc-action-button-group {
+			float: none;
+			display: block;
+			margin-bottom: 4px;
+		}
+		.button.button-large {
+			width: 100%;
 			float: none;
 			text-align: center;
+			margin: 0;
+			display: block;
 		}
-	}
-	.button-large {
-		width: 100%;
-		float: none;
-		text-align: center;
 	}
 }
 
@@ -5716,7 +5724,8 @@ table.bar_chart {
 		left: 50%;
 		top: 50%;
 		transform: translate(-50%, -50%);
-		width: 500px;
+		max-width: 100%;
+		min-width: 500px;
 		article {
 			overflow: auto;
 		}
